[gd_scene load_steps=2 format=3 uid="uid://evidence_inventory_ui"]

[ext_resource type="Script" path="res://samples/mystery/scripts/inventory_ui.gd" id="1_inventory_ui"]

[node name="InventoryUI" type="Control"]
visible = false
layout_mode = 0
anchor_left = 0.08
anchor_top = 0.12
anchor_right = 0.52
anchor_bottom = 0.88
script = ExtResource("1_inventory_ui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.08, 0.1, 0.16, 0.86)

[node name="UiPartLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 30.0
text = "Inventory UI"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 36.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Evidence List"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="DetailPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DetailPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/DetailPanel/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/DetailPanel/VBoxContainer"]
layout_mode = 2
text = "Description"
auto_wrapping_enabled = true

[node name="IconRect" type="TextureRect" parent="VBoxContainer/DetailPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
